apps/paperless-ngx/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-ngx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-ngx
  template:
    metadata:
      labels:
        app: paperless-ngx
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: veirt.dev/node-pool
                    operator: In
                    values:
                      - vps
      tolerations:
        - key: "veirt.dev/node-pool"
          operator: "Equal"
          value: "vps"
          effect: "NoSchedule"
      containers:
        - name: broker
          image: docker.io/library/redis:8-alpine
          resources:
            requests:
              memory: 16Mi
            limits:
              memory: 64Mi
          volumeMounts:
            - name: data-volume
              mountPath: /data
              subPath: paperless-ngx/redis
        - name: paperless-ngx
          image: ghcr.io/paperless-ngx/paperless-ngx:2.20.15
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: 1Gi
            limits:
              memory: 2Gi
          volumeMounts:
            - name: data-volume
              mountPath: /usr/src/paperless/data
              subPath: paperless-ngx/data
            - name: data-volume
              mountPath: /usr/src/paperless/media
              subPath: paperless-ngx/media
            - name: data-volume
              mountPath: /usr/src/paperless/export
              subPath: paperless-ngx/export
            - name: data-volume
              mountPath: /usr/src/paperless/consume
              subPath: paperless-ngx/consume
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: data-pvc
