apps/paperless-ngx/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx-service
spec:
  selector:
    app: paperless-ngx
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
